# lfortran

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci-old.yml  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  PLAN_ClassToIntrinsic.md  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  TODO.md  _lfortran_generated_file.txt  a  a.f90  b.f90  bench.sh  binary_file  bug_single.f90  build.sh  build0.bat  build0.sh  build0_win.sh  build0_win.xsh  build1.bat  build1.sh  build1_win.sh  build_release.sh  build_to_wasm.sh  build_xeus.sh  check_binary_file_in_git_history.py  check_trailing_whitespace.py  clean_patch.diff  (+45 more)
doc/man/: CMakeLists.txt  lfortran.md
examples/project1/: CMakeLists.txt
integration_tests/: 1a.f90  CMakeLists.txt  Parameterized_derived_01.f90  a.py  abort_01.f90  abs_01.f90  abs_02.f90  abs_03.f90  abs_04.f90  abs_05.f90  abs_06.f90  achar_kind_01.f90  aint_01.f90  allocatable_assign_zero_size_01.f90  allocatable_cchar_01.f90  allocatable_component_assign_01.f90  allocatable_component_assign_recursive_01.f90  allocatable_component_func_return_01.f90  allocatable_component_reshape_realloc_01.f90  allocatable_component_reshape_unallocated_01.f90  allocatable_component_scalar_use_01.f90  allocatable_component_struct_array_01.f90  allocatable_component_struct_array_02.f90  allocatable_component_unnamed_realloc_01.f90  allocatable_component_unnamed_unallocated_01.f90  allocatable_derived_array_01.f90  allocatable_dummy_descriptor_01.f90  allocatable_lhs_finalization_01.f90  allocatable_nested_types_01.f90  allocatable_oob_01.f90  allocatable_polymorphic_assign_01.f90  allocatable_polymorphic_assign_02.f90  allocatable_polymorphic_assign_03.f90  allocatable_polymorphic_mold_01.f90  allocatble_c_ptr.f90  allocate_01.f90  allocate_02.f90  allocate_03.f90  allocate_04.f90  allocate_05.f90  (+4517 more)
integration_tests/include_01/: a.f90  c.f90
integration_tests/include_01/nested/: b.f90
integration_tests/include_03/: i.inc
integration_tests/include_04/: vals.inc
integration_tests/interop/: CMakeLists.txt  mod2.h  test_cpp.cpp  wrap.py
integration_tests/templates/: add.f90  sort.f90  sum.f90
src/: 1a.f90  CMakeLists.txt
src/lfortran/: CMakeLists.txt  ast_serialization.cpp  ast_serialization.h  ast_to_json.cpp  ast_to_json.h  ast_to_openmp.cpp  ast_to_openmp.h  ast_to_src.cpp  ast_to_src.h  config.h.cmakein  cwrapper.cpp  cwrapper.h  fortran_evaluator.cpp  fortran_evaluator.h  fortran_kernel.cpp  fortran_kernel.h  fortran_wasm_kernel.cpp  mini_wasm_test.cpp  mod_to_asr.cpp  mod_to_asr.h  pickle.cpp  pickle.h  pre.js  utils.cpp  utils.h
src/lfortran/codegen/: evaluator.cpp
src/lfortran/parser/: fixedform_tokenizer.cpp  fixedform_tokenizer.h  parser.cpp  parser.h  parser.yy  parser_exception.h  parser_stype.h  preprocessor.h  preprocessor.re  semantics.h  tmp.cpp  tokenizer.h  tokenizer.re
src/lfortran/semantics/: asr_implicit_cast_rules.h  asr_lookup_name.cpp  ast_body_visitor.cpp  ast_common_visitor.h  ast_symboltable_visitor.cpp  ast_to_asr.cpp  ast_to_asr.h  common_block_union.md  comptime_eval.h  semantic_exception.h
src/lfortran/tests/: CMakeLists.txt  ir.ll  test_asm.cpp  test_ast.cpp  test_ast_to_json.cpp  test_cmake_integration.sh  test_cwrapper.c  test_error_rendering.cpp  test_llvm.cpp  test_parse.cpp  test_pickle.cpp  test_serialization.cpp  test_stacktrace.cpp  test_stacktrace2.cpp  test_wasm.cpp
src/libasr/: ASR.asdl  CMakeLists.txt  alloc.h  asdl.py  asdl_cpp.py  asr.h  asr_builder.h  asr_lookup_name.cpp  asr_lookup_name.h  asr_scopes.cpp  asr_scopes.h  asr_side_effect.h  asr_utils.cpp  asr_utils.h  asr_verify.cpp  asr_verify.h  assert.h  bigint.h  bwriter.h  casting_utils.cpp  casting_utils.h  colors.h  config.h.in  containers.h  diagnostics.cpp  diagnostics.h  dwarf_convert.py  exception.h  gen_pass.py  intrinsic_func_registry_util_gen.py  location.h  lsp.cpp  lsp_interface.h  modfile.cpp  modfile.h  pickle.cpp  pickle.h  serialization.cpp  serialization.h  stRfUA7K  (+8 more)
src/libasr/codegen/: KaleidoscopeJIT.h  asr_to_c.cpp  asr_to_c.h  asr_to_c_cpp.h  asr_to_cpp.cpp  asr_to_cpp.h  asr_to_cuda.cpp  asr_to_cuda.h  asr_to_fortran.cpp  asr_to_fortran.h  asr_to_julia.cpp  asr_to_julia.h  asr_to_liric.cpp  asr_to_liric.h  asr_to_llvm.cpp  asr_to_llvm.h  asr_to_metal.cpp  asr_to_metal.h  asr_to_mlir.cpp  asr_to_mlir.h  asr_to_py.cpp  asr_to_py.h  asr_to_python.cpp  asr_to_rust.cpp  asr_to_rust.h  asr_to_wasm.cpp  asr_to_wasm.h  asr_to_x86.cpp  asr_to_x86.h  c_utils.h  codegen_asr_utils.h  evaluator.cpp  evaluator.h  gpu_utils.h  liric_bridge.cpp  liric_llvm_alias.h  llvm_array_utils.cpp  llvm_array_utils.h  llvm_compat.h  llvm_utils.cpp  (+10 more)
src/libasr/compiler_tester/: tester.py
src/libasr/pass/: arr_dims_propagate.cpp  arr_slice.cpp  arr_slice.h  array_by_data.h  array_constant.cpp  array_op.cpp  array_op.h  array_op_simplifier.cpp  array_passed_in_function_call.cpp  array_struct_temporary.cpp  array_struct_temporary.h  class_constructor.cpp  (+125 more)
src/runtime/: CMakeLists.txt  liblfortran_runtime.so.0  liblfortran_runtime.so.0.22.0  liblfortran_runtime.so.0.29.0
src/server/: CMakeLists.txt  base_lsp_language_server.cpp  base_lsp_language_server.h  communication_protocol.cpp  communication_protocol.h  concurrent_lsp_language_server.cpp  concurrent_lsp_language_server.h  generate_lsp_code.py  language_server.cpp  language_server.h  logger.cpp  logger.h  lsp_config.cpp  lsp_config.h  lsp_exception.cpp  lsp_exception.h  lsp_issue_reporter.cpp  lsp_issue_reporter.h  lsp_json_parser.cpp  lsp_json_parser.h  lsp_json_serializer.cpp  lsp_json_serializer.h  lsp_message_stream.cpp  lsp_message_stream.h  lsp_text_document.cpp  lsp_text_document.h  message_queue.cpp  message_queue.h  message_stream.cpp  message_stream.h  observable_lock.hpp  parallel_lsp_language_server.cpp  parallel_lsp_language_server.h  process_usage.cpp  process_usage.h  queue.hpp  text_document.cpp  text_document.h  thread_pool.cpp  thread_pool.h
src/tests/: doctest.h
tests/server/: setup.cfg
(+7985 files in other folders)
